--- a/Website/index.html
+++ b/Website/index.html
@@ -38,7 +38,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-            <h1 class="mb-5">Smart Garden is here to make your daily life easier!</h1>
+            <h1 class="mb-5">Smart Garden is here to help you take care of your kitchen herbs!</h1>
           </div>
         </div>
       </div>
@@ -50,20 +50,24 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+              <a href="robot.html">
               <div class="features-icons-icon d-flex">
                 <i class="icon-screen-desktop m-auto text-primary"></i>
               </div>
-              <h3>Fully Responsive</h3>
-              <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+              </a>
+              <h3>A Friendly Companion</h3>
+              <p class="lead mb-0">Along with the Smart Garden comes a chat companion, which will help you care for your plants, and warn you when action is needed.</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+              <a href="img/troll.jpg">
               <div class="features-icons-icon d-flex">
                 <i class="icon-layers m-auto text-primary"></i>
               </div>
-              <h3>Bootstrap 4 Ready</h3>
-              <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+              </a>
+              <h3>Modable for Techies</h3>
+              <p class="lead mb-0">Want to add sensors for monitoring plant growth or perhaps you want to add a fertilizing unit? The tank is suitable for modding for sparetime techies or experts!</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -86,8 +90,8 @@
 
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Fully Responsive Design</h2>
-            <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+            <h2>Ready for Your Smart Home</h2>
+            <p class="lead mb-0">With the Smart Garden, your kitchen will be one step closer to having all your appliances controlled centrally. You can place the Garden in your kitchen or your living room, where the slick design will fit right in, regardless of surroundings.</p>
           </div>
         </div>
         <div class="row no-gutters">
@@ -114,21 +118,21 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
+              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="" style="width:150px;height:160px;">
               <h5>Thomas</h5>
               <p class="font-weight-light mb-0">"Now growing plants is easy, even for an average guy like me!"</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
+              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="" style="width:150px;height:160px;">
               <h5>Dogulas</h5>
               <p class="font-weight-light mb-0">"Thanks to Smart Garden, I no longer have to worry about my plants when I'm performing!"</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
+              <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="" style="width:150px;height:160px;">
               <h5>Christopher</h5>
               <p class="font-weight-light mb-0">"Never before has my food been so flavoursome! Smart Garden grows the best herbs!"</p>
             </div>
