--- a/Website/index.html
+++ b/Website/index.html
@@ -61,7 +61,7 @@
           </div>
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-              <a href="img/troll.jpg">
+              <a href="img/component.png">
               <div class="features-icons-icon d-flex">
                 <i class="icon-layers m-auto text-primary"></i>
               </div>
