--- a/Website/index.html
+++ b/Website/index.html
@@ -61,7 +61,7 @@
           </div>
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-              <a href="img/component.png">
+              <a href="img/componentfpgamy.png">
               <div class="features-icons-icon d-flex">
                 <i class="icon-layers m-auto text-primary"></i>
               </div>
@@ -72,9 +72,11 @@
           </div>
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+              <a href="img/video.mp4">
               <div class="features-icons-icon d-flex">
                 <i class="icon-check m-auto text-primary"></i>
               </div>
+              </a>
               <h3>Easy to Use</h3>
               <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
             </div>
@@ -87,7 +89,6 @@
     <section class="showcase">
       <div class="container-fluid p-0">
         <div class="row no-gutters">
-
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>Ready for Your Smart Home</h2>
