--- a/Website/robot.html
+++ b/Website/robot.html
@@ -1,28 +1,158 @@
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Landing Page - Start Bootstrap Theme</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <!-- Custom styles for this template -->
+    <link href="css/landing-page.min.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-light bg-light static-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Emplanted</a>
+      </div>
+    </nav>
+
+    <!-- Masthead -->
+    <header class="masthead text-white text-center">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row">
+        </div>
+      </div>
+    </header>
+
+
+    <!-- Image Showcases -->
+    <section class="showcase">
+      <div class="container-fluid p-0">
+        <div class="row no-gutters">
+          <div class="col-lg-6 order-lg-2 text-white showcase-video" style="background-video: url('img/movie.mp4');"></div>
+          <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+            <h2>Plant Commands</h2>
+            <p class="lead mb-0"><p>
+              <p>  "Add basil" </p>
+              <p>  "Add my potatoes"</p>
+              <p> "Remove basil" </p>
+              <p> "Remove my potatoes" </p>
+              <p> "Remove all my basil" </p>
+              <p> "Remove all my plants" </p>
+              <p> "Recommend me a plant" </p>
+              <p> "Tell me about parsley" </p>
+              <p> "How do I grow basil?" </p>
+              <p> "How do I care for potatoes?" </p>
+              <p> "How do I harvest mint?" </p>
+              <p> "How do I use basil?" </p>
+              <p> "Tell me about strawberry seeds" </p>
+              <p> "What temperature does thyme grow best at?" </p>
+            </p>
+          </div>
+        </div>
+        <div class="row no-gutters">
+          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+          <div class="col-lg-6 my-auto showcase-text">
+            <h2>Light Cycle Commands</h2>
+            <p class="lead mb-0">
+                <p>"Turn the lights on in 10 minutes"</p>
+                <p>"Turn the lights off in 1 hour and a half"</p>
+                <p>"Turn the lights off in 1 and a quarter hours"</p>
+                <p>"Turn the lights on everyday at 9am and off at 6pm"</p>
+                <p>"Turn the lights on everyday at 6:42 and off at 19:49"</p>
+                <p>"Turn the lights on everday at 8:43am and off at 20:00"</p>
+                <p>"Turn the lights on daily at 9am for 10 hours"</p>
+                <p>"Turn the lights on daily at 9:32 for 9 hours"</p>
+                <p>"Turn the lights on everyday at 8am for 90 minutes"</p></p>
+          </div>
+        </div>
+        <div class="row no-gutters">
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+          <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+            <h2>Future for Development</h2>
+            <p class="lead mb-0">Whether it's basil, thyme or coriander you'll be able to grow it all at home. The people behind Smart Garden are just as keen to use the plant bed as you are. As time goes by, more and more plant species will be added to the options.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+            <ul class="list-inline mb-2">
+              <li class="list-inline-item">
+                <a href="#">About</a>
+              </li>
+              <li class="list-inline-item">&sdot;</li>
+              <li class="list-inline-item">
+                <a href="#">Contact</a>
+              </li>
+              <li class="list-inline-item">&sdot;</li>
+              <li class="list-inline-item">
+                <a href="#">Terms of Use</a>
+              </li>
+              <li class="list-inline-item">&sdot;</li>
+              <li class="list-inline-item">
+                <a href="#">Privacy Policy</a>
+              </li>
+            </ul>
+            <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2018. All Rights Reserved.</p>
+          </div>
+          <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+            <ul class="list-inline mb-0">
+              <li class="list-inline-item mr-3">
+                <a href="#">
+                  <i class="fa fa-facebook fa-2x fa-fw"></i>
+                </a>
+              </li>
+              <li class="list-inline-item mr-3">
+                <a href="#">
+                  <i class="fa fa-twitter fa-2x fa-fw"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <i class="fa fa-instagram fa-2x fa-fw"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  </body>
+
+</html>
+
+
 <p>Features of facebook chat robot:</p>
 <p>It has a welcome dialog in which the robot asks for your name.
     You can later change your name by writing "my name is ..."</p>
-
-<p>You can add plants to tank with "add":
-<p>  e.g. add basil, add my potatoes </p>
-<p> You can also add multiple pots of the same plant for better optimal temperature: </p>
-<p>   e.g. if there are 5 basil plants and one pineapple, set temperature to match the 5 basil plants</p>
-
-<p>Remove plants to tank with "remove": </p>
-    e.g. remove basil, remove my potatoes
-    remove multiple plants at once:
-    e.g. remove all my basil, remove all my plants</p>
-
-<p>get suggestions and recommendations for plants:
-    e.g. recommend me a plant, suggest a good plant
-    Takes into account average daily readings for the past year. Checks if the maximum and minimum temperature/humidity lies inside the range of the maximum and minimum for optimal growth, choose the plant with the closest average to the midpoint of the max-min.</p>
-
-<p>get useful plant information:
-    e.g. tell me about parsley.
-    e.g. how do I grow basil? how do I care for potatoes?
-    e.g. how do I harvest mint?
-    e.g. how do I use basil?
-    e.g. tell me about strawberry seeds
-    e.g. what temperature does thyme grow best at?</p>
 
 <p>toggle between auto (default) and manual mode:
     e.g. set the board temperature automatically
@@ -36,17 +166,6 @@
 <p>set the desired temperature and humidity manually:
     e.g. set the temperature to 35 degrees
     e.g. set the humidity to 75%</p>
-
-<p>smart light cycles:
-    e.g. turn the lights on in 10 minutes
-    e.g. turn the lights off in 1 hour and a half
-    e.g. turn the lights off in 1 and a quarter hours
-    e.g. turn the lights on everyday at 9am and off at 6pm
-    e.g. turn the lights on everyday at 6:42 and off at 19:49
-    e.g. turn the lights on everday at 8:43am and off at 20:00
-    e.g. turn the lights on daily at 9am for 10 hours
-    e.g. turn the lights on daily at 9:32 for 9 hours
-    e.g. turn the lights on everyday at 8am for 90 minutes</p>
 
 <p>warning when the light cycle time is too short</p>
 
