--- a/Website/index.html
+++ b/Website/index.html
@@ -38,7 +38,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-            <h1 class="mb-5">Smart Garden is here to help you take care of your kitchen herbs!</h1>
+            <h1 class="mb-5">Smart Garden is here to help you take care of your kitchen plants!</h1>
           </div>
         </div>
       </div>
@@ -50,29 +50,24 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-              <a href="robot.html">
               <div class="features-icons-icon d-flex">
                 <i class="icon-screen-desktop m-auto text-primary"></i>
               </div>
-              </a>
               <h3>A Friendly Companion</h3>
               <p class="lead mb-0">Along with the Smart Garden comes a chat companion, which will help you care for your plants, and warn you when action is needed.</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-              <a href="img/componentfpgamy.png">
               <div class="features-icons-icon d-flex">
                 <i class="icon-layers m-auto text-primary"></i>
               </div>
-              </a>
               <h3>Modable for Techies</h3>
               <p class="lead mb-0">Want to add sensors for monitoring plant growth or perhaps you want to add a fertilizing unit? The tank is suitable for modding for sparetime techies or experts!</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-              <a href="img/video.mp4">
               <div class="features-icons-icon d-flex">
                 <i class="icon-check m-auto text-primary"></i>
               </div>
@@ -85,6 +80,8 @@
       </div>
     </section>
 
+
+
     <!-- Image Showcases -->
     <section class="showcase">
       <div class="container-fluid p-0">
@@ -96,17 +93,46 @@
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/componentfpgamy.png');"></div>
           <div class="col-lg-6 my-auto showcase-text">
-            <h2>Updated For Bootstrap 4</h2>
-            <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+            <h2>Modable for Techies</h2>
+            <p class="lead mb-0">Want to add sensors for monitoring plant growth or perhaps you want to add a fertilizing unit? The tank is suitable for modding for hobbyists or experts!</p>
+          </div>
+        </div>
+      </div>
+  </section>
+
+
+  <!-- Masthead -->
+  <header class="masthead text-white text-center">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <h1 class="mb-5">Using your Smart Garden</h1>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- Usage Showcase -->
+  <section class="showcase">
+    <div class="container-fluid p-0">
+        <div class="row no-gutters">
+          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/gardener.jpg');"></div>
+          <div class="col-lg-6 my-auto showcase-text">
+            <h2>What do I say to specify my plants?</h2>
+            <p class="lead mb-0">There is an extensive set of commands which you can use to communicate with the bot, and update the status of your Garden.
+              You can say "Add basil" or "Remove basil" to either add or remove a plant of a specific species from your Garden.
+              </p>
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/basil.jpg');"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Future for Development</h2>
-            <p class="lead mb-0">Whether it's basil, thyme or coriander you'll be able to grow it all at home. The people behind Smart Garden are just as keen to use the plant bed as you are. As time goes by, more and more plant species will be added to the options.</p>
+            <h2>Help for the new Gardener</h2>
+            <p class="lead mb-0">The bot can also give you gardening information: write "Recommend me a plant" for the bot to recommend you a plant that suits the
+            conditions of your Garden, or ask specifics about a plant such as "How do I use basil" for how to best use your plants.</p>
           </div>
         </div>
       </div>
@@ -141,6 +167,35 @@
         </div>
       </div>
     </section>
+
+
+        <!-- Commands -->
+        <section class="showcase">
+            <div class="row no-gutters">
+              <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+              <div class="col-lg-6 my-auto showcase-text">
+                <h2>Light Cycle Commands</h2>
+                <p class="lead mb-0">
+                    <p>"Turn the lights on in 10 minutes"</p>
+                    <p>"Turn the lights off in 1 hour and a half"</p>
+                    <p>"Turn the lights off in 1 and a quarter hours"</p>
+                    <p>"Turn the lights on everyday at 9am and off at 6pm"</p>
+                    <p>"Turn the lights on everyday at 6:42 and off at 19:49"</p>
+                    <p>"Turn the lights on everday at 8:43am and off at 20:00"</p>
+                    <p>"Turn the lights on daily at 9am for 10 hours"</p>
+                    <p>"Turn the lights on daily at 9:32 for 9 hours"</p>
+                    <p>"Turn the lights on everyday at 8am for 90 minutes"</p></p>
+              </div>
+            </div>
+            <div class="row no-gutters">
+              <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+              <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+                <h2>Future for Development</h2>
+                <p class="lead mb-0">Whether it's basil, thyme or coriander you'll be able to grow it all at home. The people behind Smart Garden are just as keen to use the plant bed as you are. As time goes by, more and more plant species will be added to the options.</p>
+              </div>
+            </div>
+          </div>
+        </section>
 
     <!-- Call to Action -->
     <section class="call-to-action text-white text-center">
