Some more website done

--- a/Website/index.html
+++ b/Website/index.html
@@ -86,7 +86,9 @@
     <section class="showcase">
       <div class="container-fluid p-0">
         <div class="row no-gutters">
-          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+          <div class="col-lg-6 order-lg-2 text-white">
+              <iframe width="600" height="400" class="embed-responsive-item-21by9" src="img/video.mp4" frameborder="0" allowfullscreen></iframe>
+          </div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>Ready for Your Smart Home</h2>
             <p class="lead mb-0">With the Smart Garden, your kitchen will be one step closer to having all your appliances controlled centrally. You can place the Garden in your kitchen or your living room, where the slick design will fit right in, regardless of surroundings.</p>
@@ -135,8 +137,37 @@
             conditions of your Garden, or ask specifics about a plant such as "How do I use basil" for how to best use your plants.</p>
           </div>
         </div>
+        <div class="row no-gutters">
+          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/sunlight.jpg');"></div>
+          <div class="col-lg-6 my-auto showcase-text">
+            <h2>Setting the Light Cycle</h2>
+            <p class="lead mb-0">The Garden will automatically control the light cycle, but you can override this if you wish to do so. You can for example tell the bot "Turn the lights off in 1 hour and a half"
+               or if you want to set a daily cycle, you can write "Turn the lights on everyday at 6:42 and off at 19:49". </p>
+          </div>
+        </div>
+        <div class="row no-gutters">
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/watering.jpg');"></div>
+          <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+            <h2>How will I know how my Garden is doing?</h2>
+            <p class="lead mb-0">If you want to know how the Garden is doing, you can simply ask "What's up?" to get a status on the conditions inside, and how fit they are for your plants. The facebook chat will also have the colour updated according to
+              how your plants are doing.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
+
+    <!-- Masthead -->
+    <header class="masthead text-white text-center">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-9 mx-auto">
+            <h1 class="mb-5">How it Works</h1>
+          </div>
+        </div>
+      </div>
+    </header>
 
     <!-- Testimonials -->
     <section class="testimonials text-center bg-light">
@@ -168,34 +199,6 @@
       </div>
     </section>
 
-
-        <!-- Commands -->
-        <section class="showcase">
-            <div class="row no-gutters">
-              <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
-              <div class="col-lg-6 my-auto showcase-text">
-                <h2>Light Cycle Commands</h2>
-                <p class="lead mb-0">
-                    <p>"Turn the lights on in 10 minutes"</p>
-                    <p>"Turn the lights off in 1 hour and a half"</p>
-                    <p>"Turn the lights off in 1 and a quarter hours"</p>
-                    <p>"Turn the lights on everyday at 9am and off at 6pm"</p>
-                    <p>"Turn the lights on everyday at 6:42 and off at 19:49"</p>
-                    <p>"Turn the lights on everday at 8:43am and off at 20:00"</p>
-                    <p>"Turn the lights on daily at 9am for 10 hours"</p>
-                    <p>"Turn the lights on daily at 9:32 for 9 hours"</p>
-                    <p>"Turn the lights on everyday at 8am for 90 minutes"</p></p>
-              </div>
-            </div>
-            <div class="row no-gutters">
-              <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
-              <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                <h2>Future for Development</h2>
-                <p class="lead mb-0">Whether it's basil, thyme or coriander you'll be able to grow it all at home. The people behind Smart Garden are just as keen to use the plant bed as you are. As time goes by, more and more plant species will be added to the options.</p>
-              </div>
-            </div>
-          </div>
-        </section>
 
     <!-- Call to Action -->
     <section class="call-to-action text-white text-center">
