Some more website done

--- a/Website/index.html
+++ b/Website/index.html
@@ -87,7 +87,13 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters">
           <div class="col-lg-6 order-lg-2 text-white">
-              <iframe width="600" height="400" class="embed-responsive-item-21by9" src="img/video.mp4" frameborder="0" allowfullscreen></iframe>
+            <div align="center">
+              <object class="embed-responsive-item">
+                  <video height ="370" width="625" autoplay loop muted>
+                    <source src="img/video.mp4" />
+                  </video>
+                </object>
+              </div>
           </div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>Ready for Your Smart Home</h2>
