--- a/Website/index.html
+++ b/Website/index.html
@@ -87,7 +87,7 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters">
           <div class="col-lg-6 order-lg-2 text-white">
-            <div align="center">
+            <div>
               <object class="embed-responsive-item">
                   <video height ="370" width="625" autoplay loop muted>
                     <source src="img/video.mp4" />
@@ -117,7 +117,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Using your Smart Garden</h1>
+          <h1 class="mb-5">Smart Garden is here to help you take care of your kitchen plants!</h1>
         </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
     </section>
 
     <!-- Masthead -->
-    <header class="masthead text-white text-center">
+    <header class="mastheadWorks text-white text-center">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
