--- a/Website/index.html
+++ b/Website/index.html
@@ -101,7 +101,7 @@
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/componentfpgamy.png');"></div>
+          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-masthead.jpg');"></div>
           <div class="col-lg-6 my-auto showcase-text">
             <h2>Modable for Techies</h2>
             <p class="lead mb-0">Want to add sensors for monitoring plant growth or perhaps you want to add a fertilizing unit? The tank is suitable for modding for hobbyists or experts!</p>
