--- a/Website/index.html
+++ b/Website/index.html
@@ -117,7 +117,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Smart Garden is here to help you take care of your kitchen plants!</h1>
+          <h1 class="mb-5">Using Your Smart Garden</h1>
         </div>
       </div>
     </div>
