--- a/Website/index.html
+++ b/Website/index.html
@@ -101,18 +101,18 @@
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-masthead.jpg');"></div>
+          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/calib.jpg');"></div>
           <div class="col-lg-6 my-auto showcase-text">
-            <h2>Modable for Techies</h2>
-            <p class="lead mb-0">Want to add sensors for monitoring plant growth or perhaps you want to add a fertilizing unit? The tank is suitable for modding for hobbyists or experts!</p>
+            <h2>A Microcosm in Your Home</h2>
+            <p class="lead mb-0">The Smart Garden allows you to have a small microcosm in your home. The Garden controls almost all conditions inside it: temperature, wind speed, humidity and light will all be regulated by the controller as you want it to.</p>
           </div>
         </div>
       </div>
   </section>
 
 
-  <!-- Masthead -->
-  <header class="masthead text-white text-center">
+  <!-- Usage Masthead -->
+  <header class="mastheadUsage text-white text-center">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
