--- a/Website/index.html
+++ b/Website/index.html
@@ -50,18 +50,23 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+              <a href ="#Works">
               <div class="features-icons-icon d-flex">
-                <i class="icon-screen-desktop m-auto text-primary"></i>
+                <i class="icon-screen-desktop m-auto text-primary">
+                </i>
               </div>
+              </a>
               <h3>A Friendly Companion</h3>
               <p class="lead mb-0">Along with the Smart Garden comes a chat companion, which will help you care for your plants, and warn you when action is needed.</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+              <a href ="#Data">
               <div class="features-icons-icon d-flex">
                 <i class="icon-layers m-auto text-primary"></i>
               </div>
+              </a>
               <h3>Modable for Techies</h3>
               <p class="lead mb-0">Want to add sensors for monitoring plant growth or perhaps you want to add a fertilizing unit? The tank is suitable for modding for sparetime techies or experts!</p>
             </div>
@@ -113,6 +118,7 @@
 
   <!-- Usage Masthead -->
   <header class="mastheadUsage text-white text-center">
+    <a name ="Works"></a>
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -165,6 +171,7 @@
 
     <!-- Masthead -->
     <header class="mastheadWorks text-white text-center">
+      <a name = "Data"></a>
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
