--- a/Website/index.html
+++ b/Website/index.html
@@ -57,7 +57,7 @@
               </div>
               </a>
               <h3>A Friendly Companion</h3>
-              <p class="lead mb-0">Along with the Smart Garden comes a chat companion, which will help you care for your plants, and warn you when action is needed.</p>
+              <p class="lead mb-0">Along with the Smart Garden comes a chat companion, which will help you care for your plants. Click on the icon for guidance on how to use the Smart Garden.</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -67,8 +67,8 @@
                 <i class="icon-layers m-auto text-primary"></i>
               </div>
               </a>
-              <h3>Modable for Techies</h3>
-              <p class="lead mb-0">Want to add sensors for monitoring plant growth or perhaps you want to add a fertilizing unit? The tank is suitable for modding for sparetime techies or experts!</p>
+              <h3>Interested in Development?</h3>
+              <p class="lead mb-0">Should you want to further mod your Smart Garden, there is plenty of room for that. Click on the icon to gain insight on how the Garden works.</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -181,6 +181,29 @@
         </div>
       </div>
     </header>
+
+
+    <!-- Implementation Showcase -->
+    <section class="showcase">
+      <div class="container-fluid p-0">
+          <div class="row no-gutters">
+            <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/chat.jpg');"></div>
+            <div class="col-lg-6 my-auto showcase-text">
+              <h2>Where does my data go and how?</h2>
+              <p class="lead mb-0">Whenever you interact with the facebook bot, our server runs a Python script where we then hold all of your details, incl. Facebook details and plants in your tank. Your info will not be shared with anyone else, as everyone are given unique thread IDs via Facebook.
+                </p>
+            </div>
+          </div>
+        <div class="row no-gutters">
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/board.jpg');"></div>
+          <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+            <h2>How does the Smart Garden work?</h2>
+            <p class="lead mb-0">On the back-end, the server sends data to the microcontroller every minute or when you talk to the bot. The server tells the microcontroller what the ideal conditions should be depending on your plants,
+            and as long as you have the system set to automatic, it will monitor the environment itself. That means that even if your internet or our servers go down, your board will still take care of your plants.</p>
+          </div>
+        </div>
+      </div>
+      </section>
 
     <!-- Testimonials -->
     <section class="testimonials text-center bg-light">
